Make starts background transparent to ppointer events (this was avoiding anithing behind them to be clickable)

--- a/webpack/scss/main.scss
+++ b/webpack/scss/main.scss
@@ -348,6 +348,7 @@ input {
   right: 0;
   top: 0;
   z-index: 99;
+  pointer-events: none;
 }
 
 
